# ximea-driver

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml
config/: params.yaml
include/ximea_driver/: ximea_driver.hpp
launch/: ximea_driver.launch.py
src/: ximea_driver.cpp  ximea_driver_node.cpp
tools/: install_sdk.sh
